<resources>
    <string name="app_name">MotionDetectionApp</string>
    <string name="message1">Pour enregistrer une action, appuyez sur le bouton ci-dessous</string>
    <string name="message2">vous aurez 3 secondes pour vous préparer puis vous aurez 7 secondes pour faire votre action</string>
    <string name="button1">Demarrer</string>
    <string name="countdown_timer">7:00</string>
    <string name="message3">Choisissez l\'action que vous avez effectuée, ou annulez si vous ne voulez pas prendre en compte cet enregistrement</string>
    <string name="buttonAnnulation">annuler enregistrement</string>
    <string name="buttonvalidation">valider le choix</string>
    <string name="Choix1">Tomber</string>
    <string name="Choix2">S\'asseoir</string>
    <string name="Choix3">Se lever</string>
    <string name="Choix4">Marcher</string>
    <string name="Choix5">Se coucher</string>
    <string name="Choix6">Poser Téléphone</string>
    <string name="Choix7">Prendre Téléphone</string>
    <string name="Choix8">Chute du Téléphone</string>
    <string name="Choix9">Mettre dans la poche</string>
    <string name="Choix10">Sortir de la poche</string>
    <string name="Patience">Patientez quelques secondes</string>

    <string name="message1_eng">To record an action, click the Start button</string>
    <string name="message2_eng">You\'ll have 3 seconds to get ready then 10 seconds to do the action</string>
    <string name="button1_eng">Start</string>
    <string name="countdown_timer_eng">7:00</string>
    <string name="message3_eng">Choose the action you just performed, or cancel if you don\'t want to save it</string>
    <string name="buttonAnnulation_eng">Cancel</string>
    <string name="buttonvalidation_eng">Confirm Action</string>
    <string name="Choix1_eng">Fall</string>
    <string name="Choix2_eng">Sit Down</string>
    <string name="Choix3_eng">Stand up</string>
    <string name="Choix4_eng">Walk</string>
    <string name="Choix5_eng">Lay Down</string>
    <string name="Choix6_eng">Put Phone Down</string>
    <string name="Choix7_eng">Pick Phone Up</string>
    <string name="Choix8_eng">Phone Fall</string>
    <string name="Choix9_eng">Put in Pocket</string>
    <string name="Choix10_eng">Take out of Pocket</string>
    <string name="Patience_eng">Please Wait</string>

</resources>